tests/negative/neg_pr115_missing_case_arm_semicolon.safe
package neg_pr115_missing_case_arm_semicolon

   subtype switch is integer (0 to 1)

   function broken (input : switch) returns boolean

      case input
         when 0
            return false return true

         when others
            return true

